--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.74.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
